Added disabled styles to button elements included inside a disabled fieldset

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1356,7 +1356,7 @@ a.box:active {
   outline: none;
 }
 
-.button[disabled] {
+fieldset[disabled] .button {
   cursor: not-allowed;
 }
 
@@ -1421,7 +1421,7 @@ a.box:active {
   color: #363636;
 }
 
-.button.is-text[disabled] {
+fieldset[disabled] .button.is-text {
   background-color: transparent;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1456,7 +1456,7 @@ a.box:active {
   color: #0a0a0a;
 }
 
-.button.is-white[disabled] {
+fieldset[disabled] .button.is-white {
   background-color: white;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1472,7 +1472,7 @@ a.box:active {
   background-color: black;
 }
 
-.button.is-white.is-inverted[disabled] {
+fieldset[disabled] .button.is-white.is-inverted {
   background-color: #0a0a0a;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1500,7 +1500,7 @@ a.box:active {
   border-color: transparent transparent white white !important;
 }
 
-.button.is-white.is-outlined[disabled] {
+fieldset[disabled] .button.is-white.is-outlined {
   background-color: transparent;
   border-color: white;
   -webkit-box-shadow: none;
@@ -1519,7 +1519,7 @@ a.box:active {
   color: white;
 }
 
-.button.is-white.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-white.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #0a0a0a;
   -webkit-box-shadow: none;
@@ -1555,7 +1555,7 @@ a.box:active {
   color: white;
 }
 
-.button.is-black[disabled] {
+fieldset[disabled] .button.is-black {
   background-color: #0a0a0a;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1571,7 +1571,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-black.is-inverted[disabled] {
+fieldset[disabled] .button.is-black.is-inverted {
   background-color: white;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1599,7 +1599,7 @@ a.box:active {
   border-color: transparent transparent #0a0a0a #0a0a0a !important;
 }
 
-.button.is-black.is-outlined[disabled] {
+fieldset[disabled] .button.is-black.is-outlined {
   background-color: transparent;
   border-color: #0a0a0a;
   -webkit-box-shadow: none;
@@ -1618,7 +1618,7 @@ a.box:active {
   color: #0a0a0a;
 }
 
-.button.is-black.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-black.is-inverted.is-outlined {
   background-color: transparent;
   border-color: white;
   -webkit-box-shadow: none;
@@ -1654,7 +1654,7 @@ a.box:active {
   color: #363636;
 }
 
-.button.is-light[disabled] {
+fieldset[disabled] .button.is-light {
   background-color: whitesmoke;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1670,7 +1670,7 @@ a.box:active {
   background-color: #292929;
 }
 
-.button.is-light.is-inverted[disabled] {
+fieldset[disabled] .button.is-light.is-inverted {
   background-color: #363636;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1698,7 +1698,7 @@ a.box:active {
   border-color: transparent transparent whitesmoke whitesmoke !important;
 }
 
-.button.is-light.is-outlined[disabled] {
+fieldset[disabled] .button.is-light.is-outlined {
   background-color: transparent;
   border-color: whitesmoke;
   -webkit-box-shadow: none;
@@ -1717,7 +1717,7 @@ a.box:active {
   color: whitesmoke;
 }
 
-.button.is-light.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-light.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #363636;
   -webkit-box-shadow: none;
@@ -1753,7 +1753,7 @@ a.box:active {
   color: whitesmoke;
 }
 
-.button.is-dark[disabled] {
+fieldset[disabled] .button.is-dark {
   background-color: #363636;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1769,7 +1769,7 @@ a.box:active {
   background-color: #e8e8e8;
 }
 
-.button.is-dark.is-inverted[disabled] {
+fieldset[disabled] .button.is-dark.is-inverted {
   background-color: whitesmoke;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1797,7 +1797,7 @@ a.box:active {
   border-color: transparent transparent #363636 #363636 !important;
 }
 
-.button.is-dark.is-outlined[disabled] {
+fieldset[disabled] .button.is-dark.is-outlined {
   background-color: transparent;
   border-color: #363636;
   -webkit-box-shadow: none;
@@ -1816,7 +1816,7 @@ a.box:active {
   color: #363636;
 }
 
-.button.is-dark.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
   background-color: transparent;
   border-color: whitesmoke;
   -webkit-box-shadow: none;
@@ -1852,7 +1852,7 @@ a.box:active {
   color: #fff;
 }
 
-.button.is-primary[disabled] {
+fieldset[disabled] .button.is-primary {
   background-color: #00d1b2;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1868,7 +1868,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-primary.is-inverted[disabled] {
+fieldset[disabled] .button.is-primary.is-inverted {
   background-color: #fff;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1896,7 +1896,7 @@ a.box:active {
   border-color: transparent transparent #00d1b2 #00d1b2 !important;
 }
 
-.button.is-primary.is-outlined[disabled] {
+fieldset[disabled] .button.is-primary.is-outlined {
   background-color: transparent;
   border-color: #00d1b2;
   -webkit-box-shadow: none;
@@ -1915,7 +1915,7 @@ a.box:active {
   color: #00d1b2;
 }
 
-.button.is-primary.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
   -webkit-box-shadow: none;
@@ -1951,7 +1951,7 @@ a.box:active {
   color: #fff;
 }
 
-.button.is-link[disabled] {
+fieldset[disabled] .button.is-link {
   background-color: #3273dc;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1967,7 +1967,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-link.is-inverted[disabled] {
+fieldset[disabled] .button.is-link.is-inverted {
   background-color: #fff;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -1995,7 +1995,7 @@ a.box:active {
   border-color: transparent transparent #3273dc #3273dc !important;
 }
 
-.button.is-link.is-outlined[disabled] {
+fieldset[disabled] .button.is-link.is-outlined {
   background-color: transparent;
   border-color: #3273dc;
   -webkit-box-shadow: none;
@@ -2014,7 +2014,7 @@ a.box:active {
   color: #3273dc;
 }
 
-.button.is-link.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-link.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
   -webkit-box-shadow: none;
@@ -2050,7 +2050,7 @@ a.box:active {
   color: #fff;
 }
 
-.button.is-info[disabled] {
+fieldset[disabled] .button.is-info {
   background-color: #209cee;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2066,7 +2066,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-info.is-inverted[disabled] {
+fieldset[disabled] .button.is-info.is-inverted {
   background-color: #fff;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2094,7 +2094,7 @@ a.box:active {
   border-color: transparent transparent #209cee #209cee !important;
 }
 
-.button.is-info.is-outlined[disabled] {
+fieldset[disabled] .button.is-info.is-outlined {
   background-color: transparent;
   border-color: #209cee;
   -webkit-box-shadow: none;
@@ -2113,7 +2113,7 @@ a.box:active {
   color: #209cee;
 }
 
-.button.is-info.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-info.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
   -webkit-box-shadow: none;
@@ -2149,7 +2149,7 @@ a.box:active {
   color: #fff;
 }
 
-.button.is-success[disabled] {
+fieldset[disabled] .button.is-success {
   background-color: #23d160;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2165,7 +2165,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-success.is-inverted[disabled] {
+fieldset[disabled] .button.is-success.is-inverted {
   background-color: #fff;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2193,7 +2193,7 @@ a.box:active {
   border-color: transparent transparent #23d160 #23d160 !important;
 }
 
-.button.is-success.is-outlined[disabled] {
+fieldset[disabled] .button.is-success.is-outlined {
   background-color: transparent;
   border-color: #23d160;
   -webkit-box-shadow: none;
@@ -2212,7 +2212,7 @@ a.box:active {
   color: #23d160;
 }
 
-.button.is-success.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-success.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
   -webkit-box-shadow: none;
@@ -2248,7 +2248,7 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.button.is-warning[disabled] {
+fieldset[disabled] .button.is-warning {
   background-color: #ffdd57;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2264,7 +2264,7 @@ a.box:active {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.button.is-warning.is-inverted[disabled] {
+fieldset[disabled] .button.is-warning.is-inverted {
   background-color: rgba(0, 0, 0, 0.7);
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2292,7 +2292,7 @@ a.box:active {
   border-color: transparent transparent #ffdd57 #ffdd57 !important;
 }
 
-.button.is-warning.is-outlined[disabled] {
+fieldset[disabled] .button.is-warning.is-outlined {
   background-color: transparent;
   border-color: #ffdd57;
   -webkit-box-shadow: none;
@@ -2311,7 +2311,7 @@ a.box:active {
   color: #ffdd57;
 }
 
-.button.is-warning.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-warning.is-inverted.is-outlined {
   background-color: transparent;
   border-color: rgba(0, 0, 0, 0.7);
   -webkit-box-shadow: none;
@@ -2347,7 +2347,7 @@ a.box:active {
   color: #fff;
 }
 
-.button.is-danger[disabled] {
+fieldset[disabled] .button.is-danger {
   background-color: #ff3860;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2363,7 +2363,7 @@ a.box:active {
   background-color: #f2f2f2;
 }
 
-.button.is-danger.is-inverted[disabled] {
+fieldset[disabled] .button.is-danger.is-inverted {
   background-color: #fff;
   border-color: transparent;
   -webkit-box-shadow: none;
@@ -2391,7 +2391,7 @@ a.box:active {
   border-color: transparent transparent #ff3860 #ff3860 !important;
 }
 
-.button.is-danger.is-outlined[disabled] {
+fieldset[disabled] .button.is-danger.is-outlined {
   background-color: transparent;
   border-color: #ff3860;
   -webkit-box-shadow: none;
@@ -2410,7 +2410,7 @@ a.box:active {
   color: #ff3860;
 }
 
-.button.is-danger.is-inverted.is-outlined[disabled] {
+fieldset[disabled] .button.is-danger.is-inverted.is-outlined {
   background-color: transparent;
   border-color: #fff;
   -webkit-box-shadow: none;
@@ -2431,7 +2431,7 @@ a.box:active {
   font-size: 1.5rem;
 }
 
-.button[disabled] {
+fieldset[disabled] .button {
   background-color: white;
   border-color: #dbdbdb;
   -webkit-box-shadow: none;
@@ -2829,8 +2829,8 @@ a.box:active {
   outline: none;
 }
 
-.input[disabled],
-.textarea[disabled] {
+fieldset[disabled] .input, fieldset[disabled]
+.textarea {
   cursor: not-allowed;
 }
 
@@ -2870,8 +2870,8 @@ a.box:active {
           box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
 }
 
-.input[disabled],
-.textarea[disabled] {
+fieldset[disabled] .input, fieldset[disabled]
+.textarea {
   background-color: whitesmoke;
   border-color: whitesmoke;
   -webkit-box-shadow: none;
@@ -2879,23 +2879,23 @@ a.box:active {
   color: #7a7a7a;
 }
 
-.input[disabled]::-moz-placeholder,
-.textarea[disabled]::-moz-placeholder {
+fieldset[disabled] .input::-moz-placeholder, fieldset[disabled]
+.textarea::-moz-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.input[disabled]::-webkit-input-placeholder,
-.textarea[disabled]::-webkit-input-placeholder {
+fieldset[disabled] .input::-webkit-input-placeholder, fieldset[disabled]
+.textarea::-webkit-input-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.input[disabled]:-moz-placeholder,
-.textarea[disabled]:-moz-placeholder {
+fieldset[disabled] .input:-moz-placeholder, fieldset[disabled]
+.textarea:-moz-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.input[disabled]:-ms-input-placeholder,
-.textarea[disabled]:-ms-input-placeholder {
+fieldset[disabled] .input:-ms-input-placeholder, fieldset[disabled]
+.textarea:-ms-input-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
@@ -3102,7 +3102,7 @@ a.box:active {
 }
 
 .textarea[rows] {
-  height: unset;
+  height: initial;
 }
 
 .textarea.has-fixed-size {
@@ -3127,8 +3127,8 @@ a.box:active {
   color: #363636;
 }
 
-.checkbox[disabled],
-.radio[disabled] {
+fieldset[disabled] .checkbox, fieldset[disabled]
+.radio {
   color: #7a7a7a;
   cursor: not-allowed;
 }
@@ -3212,7 +3212,7 @@ a.box:active {
   outline: none;
 }
 
-.select select[disabled] {
+fieldset[disabled] .select select {
   cursor: not-allowed;
 }
 
@@ -3242,7 +3242,7 @@ a.box:active {
           box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
 }
 
-.select select[disabled] {
+fieldset[disabled] .select select {
   background-color: whitesmoke;
   border-color: whitesmoke;
   -webkit-box-shadow: none;
@@ -3250,19 +3250,19 @@ a.box:active {
   color: #7a7a7a;
 }
 
-.select select[disabled]::-moz-placeholder {
+fieldset[disabled] .select select::-moz-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.select select[disabled]::-webkit-input-placeholder {
+fieldset[disabled] .select select::-webkit-input-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.select select[disabled]:-moz-placeholder {
+fieldset[disabled] .select select:-moz-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
-.select select[disabled]:-ms-input-placeholder {
+fieldset[disabled] .select select:-ms-input-placeholder {
   color: rgba(122, 122, 122, 0.3);
 }
 
@@ -3270,7 +3270,7 @@ a.box:active {
   display: none;
 }
 
-.select select[disabled]:hover {
+fieldset[disabled] .select select:hover {
   border-color: whitesmoke;
 }
 
@@ -3279,7 +3279,7 @@ a.box:active {
 }
 
 .select select[multiple] {
-  height: unset;
+  height: initial;
   padding: 0;
 }
 
@@ -3913,8 +3913,8 @@ a.box:active {
   outline: none;
 }
 
-.file-cta[disabled],
-.file-name[disabled] {
+fieldset[disabled] .file-cta, fieldset[disabled]
+.file-name {
   cursor: not-allowed;
 }
 
@@ -5661,7 +5661,7 @@ a.tag:hover {
 .dropdown.is-up .dropdown-menu {
   bottom: 100%;
   padding-bottom: 4px;
-  padding-top: unset;
+  padding-top: initial;
   top: auto;
 }
 
@@ -5950,7 +5950,6 @@ a.dropdown-item.is-active {
           flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
-  overflow: auto;
   text-align: left;
 }
 
@@ -7018,11 +7017,13 @@ a.dropdown-item.is-active {
   top: 0;
 }
 
-html.has-navbar-fixed-top {
+html.has-navbar-fixed-top,
+body.has-navbar-fixed-top {
   padding-top: 3.25rem;
 }
 
-html.has-navbar-fixed-bottom {
+html.has-navbar-fixed-bottom,
+body.has-navbar-fixed-bottom {
   padding-bottom: 3.25rem;
 }
 
@@ -7556,10 +7557,10 @@ a.navbar-link.is-active {
   outline: none;
 }
 
-.pagination-previous[disabled],
-.pagination-next[disabled],
-.pagination-link[disabled],
-.pagination-ellipsis[disabled] {
+fieldset[disabled] .pagination-previous, fieldset[disabled]
+.pagination-next, fieldset[disabled]
+.pagination-link, fieldset[disabled]
+.pagination-ellipsis {
   cursor: not-allowed;
 }
 
