--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -97,6 +97,7 @@ $button-static-border-color: $grey-lighter !default
       background-color: darken($button-text-hover-background-color, 5%)
       color: $button-text-hover-color
     &[disabled]
+    fieldset[disabled] &
       background-color: transparent
       border-color: transparent
       box-shadow: none
@@ -124,6 +125,7 @@ $button-static-border-color: $grey-lighter !default
         border-color: transparent
         color: $color-invert
       &[disabled]
+      fieldset[disabled] &
         background-color: $color
         border-color: transparent
         box-shadow: none
@@ -133,6 +135,7 @@ $button-static-border-color: $grey-lighter !default
         &:hover
           background-color: darken($color-invert, 5%)
         &[disabled]
+        fieldset[disabled] &
           background-color: $color-invert
           border-color: transparent
           box-shadow: none
@@ -153,6 +156,7 @@ $button-static-border-color: $grey-lighter !default
           &:after
             border-color: transparent transparent $color $color !important
         &[disabled]
+        fieldset[disabled] &
           background-color: transparent
           border-color: $color
           box-shadow: none
@@ -166,6 +170,7 @@ $button-static-border-color: $grey-lighter !default
           background-color: $color-invert
           color: $color
         &[disabled]
+        fieldset[disabled] &
           background-color: transparent
           border-color: $color-invert
           box-shadow: none
@@ -179,6 +184,7 @@ $button-static-border-color: $grey-lighter !default
     +button-large
   // Modifiers
   &[disabled]
+  fieldset[disabled] &
     background-color: $button-disabled-background-color
     border-color: $button-disabled-border-color
     box-shadow: $button-disabled-shadow
