Update backers March 2018

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13471,6 +13471,8 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -13486,6 +13488,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 0 10px 20px;
   width: 200px;
 }
 
