--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -258,4 +258,6 @@
   </div>
 </nav>
 
-{% include fortyfour.html %}
+{% unless include.hide_fortyfour %}
+  {% include fortyfour.html %}
+{% endunless %}
