--- a/docs/_includes/sponsor.html
+++ b/docs/_includes/sponsor.html
@@ -24,5 +24,15 @@
         height="58"
       %}
     </a>
+    <a href="http://tooltwist.com/" target="_blank" rel="nofollow">
+      {%
+        include elements/responsive-image.html
+        path="sponsors/tooltwist"
+        extension="png"
+        alt="tooltwist logo"
+        width="200"
+        height="64"
+      %}
+    </a>
   </div>
 </div>
