--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -48,11 +48,11 @@
         </div>
       </div>
 
-      <div class="intro-columns is-partners">
-        <div class="intro-column is-sponsor">
+      <div class="intro-partners">
+        <div class="intro-sponsor">
           {% include sponsor.html %}
         </div>
-        <div class="intro-column is-carbon">
+        <div class="intro-carbon">
           {% include carbon.html %}
         </div>
       </div>
