--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -18,7 +18,7 @@
   {% if page.mdi %}
     <link rel="stylesheet" href="{{ site.data.icons.mdi }}">
   {% endif %}
-  <link rel="stylesheet" href="{{ site.url }}/css/bulma-docs.min.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
+  <link rel="stylesheet" href="{{ site.url }}/css/{{ site.docs_file }}.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.data.meta.title }}" href="{{ "/atom.xml" | prepend: site.url }}">
