--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -10,6 +10,8 @@ $amazon: #ffd863
 $bleeding-green: #ABF47C
 $bleeding-red: #CA1F26
 
+// $custom-colors: ("test": $bootstrap, "alt": ($bleeding-red, "jfoeij"), "debug": (pink, black))
+
 @import "../bulma"
 @import "./_sass/highlight"
 @import "./_sass/override"
@@ -31,3 +33,5 @@ $bleeding-red: #CA1F26
 @import "./_sass/sponsors"
 @import "./_sass/book"
 @import "./_sass/native"
+
+@debug $colors
