--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -100,7 +100,7 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
     &:hover,
     &:focus
       color: darken($color, 10%) !important
-  .has-bg-#{$name}
+  .has-background-#{$name}
     background-color: $color !important
 
 @each $name, $shade in $shades
