--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4806,8 +4806,8 @@ a.box:active {
 }
 
 .tag:not(body) .delete {
-  margin-left: 0.25em;
-  margin-right: -0.375em;
+  margin-left: 0.25rem;
+  margin-right: -0.375rem;
 }
 
 .tag:not(body).is-white {
